<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B73BC"
    tools:context=".Principal">

    <LinearLayout
        android:id="@+id/linearbotonprincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <Button
            android:id="@+id/btningreso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/formatobotones"
            android:drawableTop="@drawable/ic_ingreso"
            android:text="@string/ringreso"
            android:textColor="#FFEB3B"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnlistado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/formatobotones"
            android:drawableTop="@drawable/ic_listado"
            android:text="@string/rlistado"
            android:textColor="#FFEB3B"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnbusqueda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/formatobotones"
            android:drawableTop="@drawable/ic_buscar"
            android:text="@string/rbusqueda"
            android:textColor="#FFEB3B"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnsalirprincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/formatobotones"
            android:drawableTop="@drawable/ic_salida"
            android:text="@string/rsalirprincipal"
            android:textColor="#FFEB3B"
            android:textSize="34sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>