<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0C332E"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/lineardatos"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearbotones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed">

        <EditText
            android:id="@+id/tcodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#FFD600"
            android:drawableLeft="@drawable/ic_codigo"
            android:drawableRight="@drawable/ic_codigo"
            android:ems="10"
            android:hint="@string/rcodigo"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="#070F3E"
            android:textColorHint="@color/purple_700"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tpaterno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#FFD600"
            android:drawableLeft="@drawable/ic_paterno"
            android:drawableRight="@drawable/ic_paterno"
            android:ems="10"
            android:hint="@string/rpaterno"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="#070F3E"
            android:textColorHint="@color/purple_700"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tmaterno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#FFD600"
            android:drawableLeft="@drawable/ic_materno"
            android:drawableRight="@drawable/ic_materno"
            android:ems="10"
            android:hint="@string/rmaterno"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="#070F3E"
            android:textColorHint="@color/purple_700"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tnombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#FFD600"
            android:drawableLeft="@drawable/ic_materno"
            android:drawableRight="@drawable/ic_materno"
            android:ems="10"
            android:hint="@string/rnombres"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="#070F3E"
            android:textColorHint="@color/purple_700"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/mssexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:minHeight="48dp"
            android:textSize="30sp"
            android:textStyle="bold"
            app:ms_background_color="#FFD600"
            app:ms_text_color="#070F3E"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/tdireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#FFD600"
            android:drawableLeft="@drawable/ic_direccion"
            android:drawableRight="@drawable/ic_direccion"
            android:ems="10"
            android:hint="@string/rdireccion"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="#070F3E"
            android:textColorHint="@color/purple_700"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tdistrito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#FFD600"
            android:drawableLeft="@drawable/ic_distrito"
            android:drawableRight="@drawable/ic_distrito"
            android:ems="10"
            android:hint="@string/rdistrito"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="#070F3E"
            android:textColorHint="@color/purple_700"
            android:textSize="30sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearbotones"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineardatos"
        app:layout_constraintVertical_bias="0.5">

        <Button
            android:id="@+id/bnuevo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:backgroundTint="#101535"
            android:drawableTop="@drawable/ic_nuevo"
            android:text="@string/rbnuevo"
            android:textColor="#FFD600"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bgrabar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:backgroundTint="#101535"
            android:drawableTop="@drawable/ic_calcular"
            android:text="@string/rgrabar"
            android:textColor="#FFD600"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bsalir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:backgroundTint="#101535"
            android:drawableTop="@drawable/ic_salir"
            android:text="@string/rbsalir"
            android:textColor="#FFD600"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>